enum-ptr-tests/tests/fail/repr.stderr
error: EnumPtr requires `#[repr(C, usize)]`
 --> $DIR/repr.rs:6:6
  |
6 | enum Foo<'a, 'b> {
  |      ^^^
